# bipartite-embeddings

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: run-command.sh  run-script.sh  run-test.sh
src/bipartite-embeddings/: constants.py  data_loader.py  utils.py
src/bipartite_embeddings/: constants.py  data_loader.py  evaluator.py  idioglossia.py  livesketch.py  main.py  utils.py
src/livesketch/: constants.py  data_loader.py  evaluator.py  local_simhash.py  main.py  playground.py
tests/: test_load_graph.py
