[tool.poetry]
name = "bipartite-embeddings"
version = "0.1.0"
description = ""
authors = ["georg <georg.squared@gmail.com>"]
readme = "README.md"
packages = [{include = "bipartite_embeddings"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ipdb = "^0.13.9"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
