[tool.poetry]
name = "bipartite-embeddings"
version = "0.1.0"
description = "Research for bipartite embedding generation"
authors = ["georg <georg.squared@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
requests = "^2.28.1"
pandas = "^1.3.5"
networkx = "^2.6"
stellargraph = "^1.2.1"
chardet = "^5.1.0"
karateclub = "^1.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
